--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -27,7 +27,7 @@
   }
 
   main {
-    max-width: 800px;
+    padding: 0 20rem;
     margin: 0 auto;
 
     .room-title {
@@ -36,7 +36,7 @@
       align-items: center;
 
       h1 {
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
         font-size: 24px;
         color: #29292e;
       }
@@ -46,7 +46,7 @@
         background: #e559f9;
         border-radius: 9999px;
         padding: 8px 16px;
-        color: #FFF;
+        color: #fff;
         font-weight: 500;
         font-size: 14px;
       }
@@ -96,7 +96,7 @@
           button {
             background: transparent;
             border: 0;
-            color: #835AFD;
+            color: #835afd;
             text-decoration: underline;
             font-size: 14px;
             font-weight: 500;
